--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.2</version>
-    </parent>
-
     <groupId>com.github.hels.tradeplatform</groupId>
     <artifactId>trade-platform</artifactId>
     <version>${revision}</version>
@@ -18,10 +12,13 @@
 
     <modules>
         <module>apps</module>
+        <module>libs</module>
     </modules>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>20</java.version>
+        <maven.compiler.source>20</maven.compiler.source>
+        <maven.compiler.target>20</maven.compiler.target>
         <revision>0.0.1-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
