build: downgrade java version to 17

--- a/apps/onboarding/pom.xml
+++ b/apps/onboarding/pom.xml
@@ -15,7 +15,7 @@
 	<name>onboarding</name>
 	<description>Users and Account managers</description>
 	<properties>
-
+		<java.version>${java.version}</java.version>
 	</properties>
 
 	<dependencyManagement>
