--- a/apps/onboarding/pom.xml
+++ b/apps/onboarding/pom.xml
@@ -75,7 +75,6 @@
 <!--			<groupId>org.springframework.integration</groupId>-->
 <!--			<artifactId>spring-integration-redis</artifactId>-->
 <!--		</dependency>-->
-
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -101,5 +100,12 @@
 			<artifactId>spring-integration-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.1.2</version>
+		</dependency>
+
 	</dependencies>
 </project>
