--- a/apps/onboarding/pom.xml
+++ b/apps/onboarding/pom.xml
@@ -106,6 +106,14 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.1.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>6.1.3</version>
+		</dependency>
+
+
 
 	</dependencies>
 </project>
