--- a/apps/onboarding/pom.xml
+++ b/apps/onboarding/pom.xml
@@ -110,5 +110,10 @@
 			<artifactId>spring-security-crypto</artifactId>
 			<version>6.1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
 	</dependencies>
 </project>
