--- a/apps/onboarding/pom.xml
+++ b/apps/onboarding/pom.xml
@@ -31,6 +31,11 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.github.hels.tradeplatform</groupId>
+			<artifactId>db</artifactId>
+			<version>${revision}</version>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
 <!--			<artifactId>spring-boot-starter-amqp</artifactId>-->
