--- a/libs/db/pom.xml
+++ b/libs/db/pom.xml
@@ -5,23 +5,31 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github.hels.tradeplatform</groupId>
-        <artifactId>trade-platform</artifactId>
+        <artifactId>libs</artifactId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>libs</artifactId>
-    <packaging>pom</packaging>
     <version>${revision}</version>
-
-    <modules>
-        <module>http</module>
-        <module>db</module>
-    </modules>
+    <artifactId>db</artifactId>
 
     <properties>
         <java.version>${java.version}</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.7.15</version>
+        </dependency>
+    </dependencies>
 </project>
