--- a/apps/onboarding/src/main/resources/application.yml
+++ b/apps/onboarding/src/main/resources/application.yml
@@ -1,10 +1,9 @@
 spring:
   datasource:
     platform: postgres
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/trade_platform
+    url: jdbc:postgresql://${DB_HOST}:5432/trade_platform
     username: ${DB_USER}
     password: ${DB_PASSWORD}
-    port: ${DB_PORT}
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
