--- a/apps/onboarding/src/main/resources/application.yml
+++ b/apps/onboarding/src/main/resources/application.yml
@@ -13,3 +13,8 @@ spring:
       hibernate:
         ddl-auto: update
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+trade:
+  platform:
+    security:
+      secret: ${SECRET}
